fix: match the dto to the model specification
