# src/main/java/com/footballclub/prog3td2/controller/mapper/PlayAgainMapper.java
@@ -15,15 +15,15 @@ public class PlayAgainMapper {
         return PlayAgainDto.builder()
                 .id(playAgain.getId())
                 .datetime(playAgain.getDatetime())
-                .team1(playAgain.getTeam1() != null ? teamMapper.toRest(playAgain.getTeam1()) : null)
-                .team2(playAgain.getTeam2() != null ? teamMapper.toRest(playAgain.getTeam2()) : null)
+                .team_1(playAgain.getTeam1() != null ? teamMapper.toRest(playAgain.getTeam1()) : null)
+                .team_2(playAgain.getTeam2() != null ? teamMapper.toRest(playAgain.getTeam2()) : null)
                 .goals(
                         playAgain.getGoals()
                                 .stream().map(goalMapper::toRest)
                                 .toList()
                 )
-                .team1_score(playAgain.getTeam1_score())
-                .team2_score(playAgain.getTeam2_score())
+                .team_1_score(playAgain.getTeam1_score())
+                .team_2_score(playAgain.getTeam2_score())
                 .build();
     }
 
@@ -31,8 +31,8 @@ public class PlayAgainMapper {
         PlayAgain playAgain = new PlayAgain();
         playAgain.setId(playAgainDto.getId());
         playAgain.setDatetime(playAgainDto.getDatetime());
-        playAgain.setTeam1(playAgainDto.getTeam1() != null ? teamMapper.toDomain(playAgainDto.getTeam1()) : null);
-        playAgain.setTeam2(playAgainDto.getTeam2() != null ? teamMapper.toDomain(playAgainDto.getTeam2()) : null);
+        playAgain.setTeam1(playAgainDto.getTeam_1() != null ? teamMapper.toDomain(playAgainDto.getTeam_1()) : null);
+        playAgain.setTeam2(playAgainDto.getTeam_2() != null ? teamMapper.toDomain(playAgainDto.getTeam_2()) : null);
         return playAgain;
     }
 }
